      - Worker:
        - Don't use File::Path module. Thanks to Bernd Zeimetz.
          (Closes: #553629)
    - Config:
      - Fixed the typo to properly don't check option names for all
        'unattended-upgrade::*' options. Thanks to Jean-Christophe Dubacq.
        (Closes: #547951)
      - Changed the default value of the 'cupt::resolver::quality-bar' option
        from -250 to 0.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200

cupt (1.2.1) unstable; urgency=medium

  * cupt:
    - 'screenshots':
      - Launch a browser in "background" to display more than two packages
        simultaneously. Thanks to Pavel Chernyshev.
  * Cupt:
    - System:
      - Resolvers/Native:
        - Speeded up applying changes when only one resolution (in the
          solution thread) available.
    - Config:
      - Changed the default value of the 'cupt::resolver::quality-bar' option
        from -400 to -250 to prevent producing somewhat bad solutions under
        rare circumstances.
  * debian/control:
    - Added liblist-moreutils-perl to build-depends. Fixes FTBFS.
      Thanks to Lucas Nussbaum. Urgency is set to medium. (Closes: #552948)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 12:04:26 +0200

cupt (1.2.0) experimental; urgency=low

  * cupt:
    - New 'snapshot' subcommand.
    - 'satisfy':
      - Fixed taking architecture specifiers from the command-line into
        account.
  * Cupt:
    - Config:
      - New configuration option 'cupt::directory::state'.
      - New configuration option 'cupt::directory::state::snapshots'.
      - New configuration option 'cupt::worker::archives-space-limit'.
      - New configuration option 'cupt::worker::archives-space-limit::tries'.
    - System:
      - Worker:
        - Removed "locking" /var/lib/dpkg/lock, it's useless (noop).
        - Implemented Cupt lock.
        - New method 'save_system_snapshot'.
        - New method 'remove_system_snapshot'.