@@ -50,6 +50,8 @@ cupt (1.3.0) UNRELEASED; urgency=low
         (Closes: #547951)
       - Changed the default value of the 'cupt::resolver::quality-bar' option
         from -250 to 0.
+  * debian/control:
+    - Restricted dependency of cupt on libcupt-perl to match minor version.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200
 
